# pygenieacs

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
pygenie/: presets.py  provision.py
pygenieacs/: provisions.py  tasks.py
src/pygenie/: __init__.py  clients.py
src/pygenieacs/: __init__.py  clients.py  devices.py  presets.py  tasks.py
